# FuzzyRegression

./: .gitmodules  CMakeLists.txt
fuzzy-regression/: CMakeLists.txt
fuzzy-regression/include/: TupleWriter.hpp
fuzzy-regression/include/datageneration/: LinearRegressionDataGenerator.hpp
fuzzy-regression/include/helper/: Program.hpp
fuzzy-regression/include/regression/: FuzzyRegression.hpp
fuzzy-regression/include/streams/: TupleWriter.hpp
fuzzy-regression/src/: FuzzyRegression.cpp  LinearRegressionDataGenerator.cpp  TupleWriter.cpp  main.cpp
fuzzy-regression/src/datageneration/: LinearRegressionDataGenerator.cpp
fuzzy-regression/src/helper/: Program.cpp
fuzzy-regression/src/regression/: FuzzyRegression.cpp
fuzzy-regression/src/streams/: TupleWriter.cpp
